src/test/ui/rfc-2632-const-trait-impl/default-method-body-is-const-body-checking.stderr
error: cannot call `foo::<()>` because it is not `const`
  --> $DIR/default-method-body-is-const-body-checking.rs:12:9
   |
LL |     fn foo() {
   |        --- required because of this
LL |         foo::<()>();
   |         ^^^^^^^^^^^

error: aborting due to previous error

